<resources>
    <string name="app_name">TrueCitizenQuiz</string>
    <string name="question_declaration">The (U.S.) Declaration of Independence was adopted in 1776.</string>
    <string name="false_text">False</string>
    <string name="true_text">True</string>
    <string name="android_icon">Android icon</string>
    <string name="previous_button">Previous Button</string>
    <string name="next_button">Next Button</string>
</resources>